--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -62,7 +62,7 @@
 						<ul class="results">
 						</ul>
 					</section>
-					</section>
+<!--					</section>-->
 				</div>
 
 				<div class="user-container">
