--- a/src/main/resources/templates/partials/venued_partials.html
+++ b/src/main/resources/templates/partials/venued_partials.html
@@ -56,7 +56,7 @@
 					<input class="search_input" type="text" name="search_input" placeholder="Search...">
 					<input id="search_location_input" type="text" name="search_location_input" placeholder="Enter a location" autocomplete="off">
 					<div class="search_icon_container">
-						<img th:src="@{imgs/search.svg}" alt="" class="search_icon">
+						<img src="/imgs/search.svg" alt="" class="search_icon">
 					</div>
 					<section class="results-container hide">
 						<ul class="results">
