--- a/src/main/resources/templates/venue.html
+++ b/src/main/resources/templates/venue.html
@@ -21,11 +21,11 @@
 			<header class="wrapper header-wrapper">
 
 				<div class="hero-card">
-					<img src="/imgs/venue_placeholder.jpg" alt="" class="image">
+					<img th:src="${venue.getImgPath()}" alt="" class="image">
 				</div>
 
 				<div class="event-card">
-					<p class="title" th:text="${venue.venueName}"></p>
+					<p class="title" th:text="${venue.getVenueName()}"></p>
 
 					<div class="event-container">
 						<div class="#">
@@ -46,7 +46,6 @@
 			<main id="main-section">
 				<!----- tip and question section starts here --->
 				<section class="wrapper cards-wrapper">
-
 					<!--------- Tips card ---------->
 					<div class="tip-card">
 						<div class="card-wrapper">
@@ -73,13 +72,7 @@
 													<button type="Submit" class="btn submit">Submit</button>
 												</div>
 											</form>
-
-
-
-
-
 										</div>
-
 									</div>
 								</div>
 							</div>
