--- a/src/main/resources/templates/venue.html
+++ b/src/main/resources/templates/venue.html
@@ -38,7 +38,8 @@
 						</div>
 					</div>
 
-					<p class="desc venue-address" th:text="${venue.address}"></p>
+					<p class="desc venue-address" th:text="${venue.getAddress()}"></p>
+					
 				</div>
 
 			</header>
