--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-  <div th:replace="~{partials/venued_partials :: myheader('Profile')}"></div>
-  <link rel="stylesheet" th:href="@{/css/universalStyle.css}">
-  <link rel="stylesheet" th:href="@{/css/profile/profile.css}">
+    <div th:replace="~{partials/venued_partials :: myheader('Profile')}"></div>
+    <link rel="stylesheet" th:href="@{/css/universalStyle.css}">
+    <link rel="stylesheet" th:href="@{/css/profile/profile.css}">
 </head>
 <body>
   <div class="page-wrapper">
         <nav th:replace="~{partials/venued_partials :: mynav}"></nav>
 
-        <section class="container mt-5 border">
-            <div class="row p-3 mx-0 container">
-                <div class="col-sm-5 first border">
-                    <div>
-                        <p><img src="../imgs/Avatar-Placeholder.png" alt="user-image"></p>
-                        <p>user name goes here...</p>
-                    </div>
-                    <div>
+        <section class="main-wrapper">
+            <div class="row-wrapper">
+                <div class="first-card-wrapper">
+                    <div class="avatar-container">
                         <p>
-                            <button>Edit Profile</button>
+                            <img src="../imgs/Avatar-Placeholder.png" alt="user-image">
                         </p>
-                        <form action="">
+                        <p>user name goes here...</p>
+                        <div class="edit-btn-container">
+                            <button>Edit Profile</button>
+                        </div>
+                    </div>
+                    <div class="form-container">
+                        <form class="form" action="#" method="#">
                             <div>
                                <label for="name">Name</label>
                                <input type="text" name="name" id="name">
@@ -33,82 +35,82 @@
                     </div>
                 </div>
 
-                <div class="col-sm-7 second border">
-                    <h3>User Profile</h3>
-                    <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
-                        <li class="nav-item me-5" role="presentation">
-                            <button class="nav-link active" id="answer-tab" data-bs-toggle="tab" data-bs-target="#answer" type="button" role="tab" aria-controls="answer" aria-selected="true">
+                <div class="second-card-wrapper">
+                    <ul class="lists-wrapper" id="myTab">
+                        <li class="list-item" >
+                            <button class="tap-btn" id="answer-tab">
                                 <span class="badge rounded-pill bg-secondary me-1">0</span>
                                 Answers
                             </button>
                         </li>
-                        <li class="nav-item me-5" role="presentation">
-                            <button class="nav-link" id="question-tab" data-bs-toggle="tab" data-bs-target="#question" type="button" role="tab" aria-controls="question" aria-selected="false">
+                        <li class="list-item">
+                            <button class="tap-btn" id="question-tab">
                                 <span class="badge rounded-pill bg-secondary me-1">0</span>
                                Questions
                             </button>
                         </li>
-                        <li class="nav-item me-5" role="presentation">
-                            <button class="nav-link" id="tip-tab" data-bs-toggle="tab" data-bs-target="#tip" type="button" role="tab" aria-controls="tip" aria-selected="false">
+                        <li class="list-item">
+                            <button class="tap-btn" id="tip-tab">
                                 <span class="badge rounded-pill bg-secondary me-1">0</span>
                                 Tips
                             </button>
                         </li>
                     </ul>
 
-                    <div class="tab-content px-3 mb-4 border" id="myTabContent">
+                    <div class="tab-content" id="myTabContent">
                         <!---- answer tab-pane ---->
-                        <div class="tab-pane fade show active" id="answer" role="tabpanel" aria-labelledby="answer-tab">
-                            <h3>Answer Pane</h3>
+                        <div class="" id="answer">
                             <!-- first card begins here -->
                             <div class="card mb-3">
-                                <div class="card-header bg-primary text-white">
-
-                                </div>
-                                <div class="card-header">
-
-                                </div>
-                                <div class="card-header bg-white">
-
-                                </div>
+                                <ul class="answered-question">
+                                    <li>
+                                        <span>answered question</span>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </li>
+                                    <li>
+                                        <span>answered question</span>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
 
                         <!---- Question tab-pane ------->
-                        <div class="tab-pane fade" id="question" role="tabpanel" aria-labelledby="question-tab">
-                            <h3>Question Pane</h3>
+                        <div class="tab-pane" id="question">
                             <!-- second card begins here -->
                             <div class="card mb-3">
-                                <div class="card-header bg-primary text-white">
-
-                                </div>
-                                <div class="card-header">
-
-                                </div>
-                                <div class="card-header bg-white">
-
-                                </div>
+                                <ul class="list-questions">
+                                    <li>
+                                        <span>user question</span>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </li>
+                                    <li>
+                                        <span>user question</span>
+                                        <button>edit</button>
+                                        <button>delete</button>
+                                    </li>
+                                </ul>
                             </div>
 
                         </div>
 
                         <!------ Tip tap-pane ------->
-                        <div class="tab-pane fade" id="tip" role="tabpanel" aria-labelledby="tip-tab">
-                            <h3>Tip Pane</h3>
+                        <div class="tab-pane fade w-100" id="tip">
                             <!-- third card begins here -->
                             <div class="card mb-3">
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">
-
+                                <ul class="list-tips">
+                                    <li>
+                                        <span>user tip</span>
+                                        <button>edit</button>
+                                        <button>delete</button>
                                     </li>
-                                    <li class="list-group-item">
-
-                                    </li>
-                                    <li class="list-group-item">
-
-                                    </li>
-                                    <li class="list-group-item">
-
+                                    <li>
+                                        <span>user tip</span>
+                                        <button>edit</button>
+                                        <button>delete</button>
                                     </li>
                                 </ul>
                             </div>
