--- a/src/main/resources/static/css/homepage/recentSubmissions.css
+++ b/src/main/resources/static/css/homepage/recentSubmissions.css
@@ -8,7 +8,7 @@
 #recent-cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .centerbutton {
