profile on progress

--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -14,8 +14,11 @@
                 <div class="first-card-wrapper">
                     <div class="avatar-container">
                         <p>
-                            <img src="../imgs/Avatar-Placeholder.png" alt="user-image">
+                            <img src="../imgs/Avatar-Placeholder-copy.png" alt="user-image">
                         </p>
+                        <form action="">
+                            <input type="file" name="user-image" value="">
+                        </form>
                         <p>user name goes here...</p>
                         <div class="edit-btn-container">
                             <button>Edit Profile</button>
