--- a/src/main/resources/static/css/profile/profile.css
+++ b/src/main/resources/static/css/profile/profile.css
@@ -11,7 +11,7 @@
 }
 .avatar-container {
     border: 2px dashed yellow;
-    margin: 2rem 0;
+    margin: 0 0 2rem ;
 }
 .avatar-container p:first-child {
     text-align: center;
@@ -49,7 +49,9 @@ textarea {
 .lists-wrapper {
     display: flex;
     justify-content: center;
-   border: 2px solid aquamarine;
+    border: 2px solid aquamarine;
+    padding: 1rem;
+    gap: 0.5rem;
 }
 .list-item {
     display: inline-block;
@@ -62,5 +64,12 @@ textarea {
     .row-wrapper {
         display:flex;
         gap: 1.5rem;
+    }
+    .first-card-wrapper {
+        flex-basis: 45%;
+    }
+    .second-card-wrapper {
+        margin: 0;
+        flex-basis: 55%;
     }
 }
